src/test/ui/binary-op-on-double-ref.stderr
error[E0369]: binary operation `%` cannot be applied to type `&&{integer}`
  --> $DIR/binary-op-on-double-ref.rs:4:11
   |
LL |         x % 2 == 0
   |         - ^ - {integer}
   |         |
   |         &&{integer}
   |
   = help: `%` can be used on '{integer}', you can dereference `x`: `*x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
